ui/scss/init/_gui.scss
/* ... */
.confirming-change {
  padding-top: var(--spacing-s);
  font-size: var(--font-small);
}

.background-image {
  position: fixed;
  left: 0px;
  right: 0px;
  top: 0px;
  bottom: 0px;

  background-color: var(--color-background);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  filter: blur(23px);
  -webkit-filter: blur(23px);
}

.theme {
  position: fixed;
  left: 0px;
  right: 0px;
  top: 0px;
  bottom: 0px;
  background-image: var(--background-shade);
}

.stars {
  position: fixed;
  left: 0px;
  right: 0px;
  top: 0px;
  bottom: 0px;
  div {
    display: none;
  }
}

.stars-active {
  #stars,
  #stars2 {
    display: block;
  }
}

// The following wrapper classes are temporary to fix page specific issues

.radio {
  display: inline-block;
  label {
    margin-bottom: -5px;
  }
}

.disabled {
  .table__wrapper {
    height: 98px;
    overflow: hidden;
  }
}

.empty {
  margin: 0;
  display: unset;
  .empty__wrap {
    display: unset;
    .empty__content {
      border: 2px solid var(--color-border);
      border-radius: var(--border-radius);
      background-color: var(--color-input-bg);
      padding: var(--spacing-xxxs);
      width: 100%;
      max-width: unset;
    }
  }

  .spinner {
    border: 2px solid var(--color-border);
    border-radius: var(--border-radius);
    background-color: var(--color-input-bg);
    width: 100%;
    max-width: unset;
    margin: 0;
    height: var(--height-input);
  }
}

[data-reach-menu-popover] {
  @media (max-width: $breakpoint-small) {
    max-width: calc(100% - var(--spacing-xs) * 2);
  }
}

.channelsToFollow-wrapper {
  margin-top: var(--spacing-l);
}

.static-page {
  .card__title-section {
    padding-bottom: 0;
    .card__title {
      font-size: var(--font-title);
    }
  }
  p {
    margin-top: var(--spacing-m);
    &:nth-of-type(1) {
      margin-top: 0;
      margin-bottom: var(--spacing-l);
      opacity: 0.8;
    }
    &:nth-of-type(2) {
      margin-bottom: var(--spacing-l);
    }
  }
  h3 {
    font-size: var(--font-large);
    font-weight: var(--font-weight-bold);
    margin-top: var(--spacing-xl);
    margin-bottom: 0;
  }
  a {
    color: var(--color-primary);
    &:hover {
      color: var(--color-secondary);
    }
  }
}

// Temporary master classes

.markdown-preview {
  .icon--ExternalLink {
    flex-shrink: 0;
    margin-bottom: -1px !important;
  }
}

.comments .markdown-preview .claim-link,
.content__viewer--secondary {
  li,
  a {
    height: 100%;
    width: 100%;
    margin: 0px !important;
  }
}

.comments .markdown-preview .claim-link {
  min-width: 500px;
  max-width: 50%;
  margin-top: var(--spacing-xs);
}

.hide-ribbon {
  .claim-tile__repost-author {
    display: none;
  }
}
.show-ribbon {
  .claim-tile__repost-author {
    display: block;
  }
}

// Fix Lightbox (Image viewer) modal backdrop bug
// Context: transform, filter and perspective break "position: fixed" in child element
.lb-open-lightbox {
  .ReactModal__Content {
    transform: unset !important;
  }

  .modal {
    -webkit-backdrop-filter: unset;
    backdrop-filter: unset;
  }
}

// Remove resize icon in textareas
::-webkit-resizer {
  display: none;
}

input:-webkit-autofill,
input:-webkit-autofill:focus {
  transition: background-color 600000s 0s, color 600000s 0s;
}

// Remove tap focus on mobile devices
input,
textarea,
button,
select,
a {
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

.video-js .vjs-volume-level {
  &::before {
    color: white !important;
  }
}

// Temporary fix for focus-visible
*:focus-visible:not(.modal):not(.card):not(.wunderbar__input):not(.menu__list):not(.menu__list--header):not(
    .button--secondary
  ):not(.button-like):not(.button-dislike):not(select):not(input):not(textarea):not(video):not(
    [data-reach-tab-panels]
  ):not([data-reach-tabs]):not([data-reach-tab-panel]):not(.CodeMirror-code):not(.MuiModal-root):not(
    .MuiPaper-root
  ):not(.card):not(#onetrust-banner-sdk):not(.vjs-touch-overlay) {
  background-color: rgba(var(--color-primary-dynamic), 0.2) !important;
  color: var(--color-text) !important;
  box-shadow: 0px 0px 0px 2px var(--color-primary) inset;

  .icon {
    stroke: var(--color-text) !important;
  }
}

.channel-selector {
  button {
    flex: 1;
  }
  button:focus-visible {
    background-color: unset !important;
    box-shadow: unset !important;
    .channel-selector__item {
      background-color: rgba(var(--color-primary-dynamic), 0.2) !important;
      box-shadow: 0px 0px 0px 2px var(--color-primary) inset;
    }
  }
}

select:focus-visible,
input:focus-visible:not(.wunderbar__input),
textarea:focus-visible {
  box-shadow: 0px 0px 0px 2px var(--color-primary) inset;
}

input:not(input:-webkit-autofill)::-webkit-contacts-auto-fill-button {
  background-color: var(--color-text);
}
/* ... */

